--- a/config/QA.properties
+++ b/config/QA.properties
@@ -7,3 +7,4 @@ Password=
 BrowserName= Chrome
 URL=https://www.goibibo.com/
 UserName= Kunal Soni
+ChromeBinary = C:/Program Files/Google/Chrome Beta/Application/chrome.exe
